--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@pushchain/core": "^2.1.6",
     "@pushchain/ui-kit": "^2.0.13",
     "@pythnetwork/entropy-sdk-solidity": "^2.0.0",
-    "@rainbow-me/rainbowkit": "^2.2.8",
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.14.5",
     "@reduxjs/toolkit": "^1.9.7",
@@ -52,8 +51,6 @@
     "@telegram-apps/bridge": "^1.9.2",
     "@types/three": "^0.176.0",
     "@visx/responsive": "^3.10.2",
-    "@wagmi/connectors": "^5.9.4",
-    "@wagmi/core": "^2.19.0",
     "@wallet-standard/core": "^1.1.1",
     "autoprefixer": "10.4.19",
     "clsx": "^2.1.1",
@@ -85,9 +82,7 @@
     "styled-components": "^6.1.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.3",
-    "three": "^0.176.0",
-    "viem": "^2.34.0",
-    "wagmi": "^2.16.4"
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.8.0",
