--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tanstack/react-query": "^5.75.5",
     "@telegram-apps/bridge": "^1.9.2",
     "@types/three": "^0.176.0",
+    "@vercel/analytics": "^1.5.0",
     "@visx/responsive": "^3.10.2",
     "@wallet-standard/core": "^1.1.1",
     "autoprefixer": "10.4.19",
